--- a/templates/main.html
+++ b/templates/main.html
@@ -172,6 +172,9 @@
 												đáp</a></li>
 									</ul>
 								</li>
+								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1478 logout-menu-item" id="menu-item-1478">
+									<a href="{{url_for('Logout')}}">Đăng xuất</a>
+								</li>
 							</ul>
 						</div>
 					</div><!-- End main-menu -->
@@ -455,7 +458,7 @@
 								</div>
 							<div>
 								<p class="text-center add_bottom_30"><a class="btn_1 medium" href="/hotel/"><i
-											class="icon-eye-7"></i>Xem thêm khách sạn</a></p>
+											class="icon-eye-7"></i>Xem thêm điểm du lịch</a></p>
 							</div>
 						</div>
 					</div>
@@ -515,7 +518,7 @@
 							</div>
 							<div>
 								<p class="text-center add_bottom_30"><a class="btn_1 medium" href="/hotel/"><i
-											class="icon-eye-7"></i>Xem thêm địa điểm du lịch</a></p>
+											class="icon-eye-7"></i>Xem thêm khách sạn</a></p>
 							</div>
 						</div>
 					</div>
