--- a/static/css/main.css
+++ b/static/css/main.css
@@ -132,6 +132,28 @@ header.sticky {
     color: #ffffff;
 }
 
+.main-menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-menu-chinh-container{
+    flex-grow: 1;
+}
+
+.menu {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.logout-menu-item {
+    margin-left: auto;
+}
+
+
 .main-menu>div>ul>li:hover>a {
     color: #e04f67;
 }
